# snappy_manifolds

./: .gitignore  .hgignore  MANIFEST.in  README.rst  pyproject.toml  setup.py
dev/: add_9_tet_knots.py  add_DT_signs.py  add_hopf_to_HT.py  add_torsion_platonic.py  duplicate_links.py  duplicate_pairs.txt  fix_cusps.py  fix_decorations.py  fix_torsion.py  isosig_patch.py  make_db.py  platonic_cusp_order.py  run.py  sqlitetocsv.py  update_csv.py
manifold_src/: make_sqlite_db.py
manifold_src/original_manifold_sources/: census_knots.csv  link_exteriors.csv  nonorientable_closed_census.csv  nonorientable_cusped_census.csv  orientable_closed_census.csv
manifold_src/original_manifold_sources/platonic_manifolds/: cubical_nonorientable_closed_census.csv  cubical_orientable_closed_census.csv  dodecahedral_nonorientable_closed_census.csv  dodecahedral_nonorientable_cusped_census.csv  dodecahedral_orientable_closed_census.csv  dodecahedral_orientable_cusped_census.csv  icosahedral_nonorientable_closed_census.csv  icosahedral_orientable_closed_census.csv  octahedral_nonorientable_cusped_census.csv  octahedral_orientable_cusped_census.csv  tetrahedral_nonorientable_cusped_census.csv  tetrahedral_orientable_cusped_census.csv
python_src/: __init__.py  database.py  test.py
validation/: compare_common.py  compare_csv.py  compare_db.py  speed_test.py
